--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "api_mmh",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
-    "dev": "ts-node-dev --transpile-only src/server.ts"
-  },
   "license": "MIT",
+  "scripts": {
+    "dev": "ts-node-dev --transpile-only src/server.ts",
+    "typeorm": "ts-node-dev node_modules/.bin/typeorm"
+  },
   "dependencies": {
     "express": "^4.18.2",
     "pg": "^8.11.3",
