--- a/package.json
+++ b/package.json
@@ -29,11 +29,12 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.3.2",
     "@nestjs/typeorm": "^10.0.2",
-    "bcrypt": "^5.1.1",
+    "axios": "^1.7.7",
+    "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.2",
-    "firebase-admin": "^11.11.1",
+    "firebase-admin": "^12.7.0",
     "firebase-functions": "^4.7.0",
     "node-cron": "^3.0.3",
     "passport": "^0.6.0",
@@ -47,10 +48,10 @@
   "devDependencies": {
     "@nestjs/cli": "^10.3.2",
     "@nestjs/schematics": "^10.1.1",
-    "@nestjs/testing": "^10.3.2",
+    "@nestjs/testing": "^10.4.8",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.12",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20.11.17",
     "@types/passport-jwt": "^3.0.13",
     "@types/passport-local": "^1.0.38",
@@ -60,11 +61,11 @@
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "jest": "^29.5.0",
+    "jest": "^29.7.0",
     "prettier": "^3.2.5",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.4",
-    "ts-jest": "^29.1.2",
+    "ts-jest": "^29.2.5",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
