--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,11 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "strict": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "paths": {
+      "src/*": [
+        "./src/*"
+      ]
+    }
   }
 }
